force-app/main/default/objects/Partnership_Objective__c/Partnership_Objective__c.object-meta.xml
<CustomObject>
    <description>Track the key objectives of our customer relationships</description>
    <label>Partnership Objective</label>
    <nameField>
        <label>Partnership Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partnership Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>