force-app/main/default/objects/Partnership_Objective__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field should auto-populate, but should be checked to ensure that the correct Salesforce Account is associated with the Partnership Objective</description>
    <inlineHelpText>This field should auto-populate, but should be checked to ensure that the correct Salesforce Account is associated with the Partnership Objective</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partnership Objectives</relationshipLabel>
    <relationshipName>Partnership_Objectives</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>