force-app/main/default/objects/Partnership_Objective__c/fields/Attainment__c.field-meta.xml
<CustomField>
    <fullName>Attainment__c</fullName>
    <label>Attainment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>