force-app/main/default/objects/Partnership_Objective__c/fields/Blockers_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Blockers_Challenges__c</fullName>
    <description>(Optional) Document any blockers and/or challenges to successfully achieving the objective. These should be one-line executive bullet points that directly address the challenges.</description>
    <inlineHelpText>(Optional) Document any blockers and/or challenges to successfully achieving the objective. These should be one-line executive bullet points that directly address the challenges.</inlineHelpText>
    <label>Blockers &amp; Challenges</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>