force-app/main/default/objects/Partnership_Objective__c/fields/Business_Development_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Owner__c</fullName>
    <description>Business Development Owner on the related Account.</description>
    <formula>Account__r.Business_Development_Owner_text__c</formula>
    <inlineHelpText>Business Development Owner on the related Account.</inlineHelpText>
    <label>Business Development Owner</label>
    <type>Text</type>
</CustomField>