force-app/main/default/objects/Partnership_Objective__c/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <inlineHelpText>What is preventing us from maximizing growth of the relationship?</inlineHelpText>
    <label>Challenges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>