force-app/main/default/objects/Partnership_Objective__c/fields/Circle_Mint_T_C__c.field-meta.xml
<CustomField>
    <fullName>Circle_Mint_T_C__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by CSMs to categorize objectives</description>
    <inlineHelpText>Please see the Guru card - Primary Objectives Guidance for CSMs</inlineHelpText>
    <label>Circle Mint T&amp;C_DNU</label>
    <type>Checkbox</type>
</CustomField>