force-app/main/default/objects/Partnership_Objective__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>For contracted customers this field is derived from the opportunity. For those without a contract this defaults to 12 months from Objective Start Date, but can be edited if necessary.</description>
    <inlineHelpText>For contracted customers this field is derived from the opportunity. For those without a contract this defaults to 12 months from Objective Start Date, but can be edited if necessary.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>