force-app/main/default/objects/Partnership_Objective__c/fields/Current_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Current_Metrics__c</fullName>
    <label>Current Metrics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>