force-app/main/default/objects/Partnership_Objective__c/fields/Current_MEW_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_MEW_Updated_Date__c</fullName>
    <description>Timestamp for the last time Current MeWs was updated.</description>
    <inlineHelpText>Timestamp for the last time Current MeWs was updated.</inlineHelpText>
    <label>Current MEW Updated Date</label>
    <type>DateTime</type>
</CustomField>