force-app/main/default/objects/Partnership_Objective__c/fields/Current_MEWs__c.field-meta.xml
<CustomField>
    <fullName>Current_MEWs__c</fullName>
    <description>This field should include the current number of meaningful wallets</description>
    <inlineHelpText>This field should include the current number of meaningful wallets</inlineHelpText>
    <label>Current MEWs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>