force-app/main/default/objects/Partnership_Objective__c/fields/Current_Stablecoin_Liquidity__c.field-meta.xml
<CustomField>
    <fullName>Current_Stablecoin_Liquidity__c</fullName>
    <description>Current total amount of USDC held on platform.</description>
    <inlineHelpText>Current total amount of USDC held on platform.</inlineHelpText>
    <label>Current Stablecoins on Platform</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>