force-app/main/default/objects/Partnership_Objective__c/fields/Current_Stablecoin_Liquidity_Updated__c.field-meta.xml
<CustomField>
    <fullName>Current_Stablecoin_Liquidity_Updated__c</fullName>
    <description>Timestamp for the last time Current Stablecoins on Platform was updated.</description>
    <inlineHelpText>Timestamp for the last time Current Stablecoins on Platform was updated.</inlineHelpText>
    <label>Current Stablecoins on Platform Updated</label>
    <type>DateTime</type>
</CustomField>