force-app/main/default/objects/Partnership_Objective__c/fields/Current_Stablecoin_Volume__c.field-meta.xml
<CustomField>
    <fullName>Current_Stablecoin_Volume__c</fullName>
    <description>Aggregate stablecoin transaction volume since the beginning of the objective</description>
    <inlineHelpText>Aggregate stablecoin transaction volume since the beginning of the objective</inlineHelpText>
    <label>Current Stablecoin Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>