force-app/main/default/objects/Partnership_Objective__c/fields/Current_Stablecoin_Volume_Updated__c.field-meta.xml
<CustomField>
    <fullName>Current_Stablecoin_Volume_Updated__c</fullName>
    <description>Timestamp for the last time Current Stablecoin Volume was updated.</description>
    <inlineHelpText>Timestamp for the last time Current Stablecoin Volume was updated.</inlineHelpText>
    <label>Current Stablecoin Volume Updated</label>
    <type>DateTime</type>
</CustomField>