force-app/main/default/objects/Partnership_Objective__c/fields/Custom_Metric__c.field-meta.xml
<CustomField>
    <fullName>Custom_Metric__c</fullName>
    <description>(Numerical Values Only) Current value of the Success Metric Details.</description>
    <inlineHelpText>(Numerical Values Only) Current value of the Success Metric Details.</inlineHelpText>
    <label>Custom Metric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>