force-app/main/default/objects/Partnership_Objective__c/fields/Custom_Metric_Details__c.field-meta.xml
<CustomField>
    <fullName>Custom_Metric_Details__c</fullName>
    <description>Short description of the value captured in Custom Metric.</description>
    <inlineHelpText>Short description of the value captured in Custom Metric.</inlineHelpText>
    <label>Custom Metric Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>