force-app/main/default/objects/Partnership_Objective__c/fields/Custom_Metric_Updated__c.field-meta.xml
<CustomField>
    <fullName>Custom_Metric_Updated__c</fullName>
    <description>Timestamp for the last time Custom Metric was updated.</description>
    <inlineHelpText>Timestamp for the last time Custom Metric was updated.</inlineHelpText>
    <label>Custom Metric Updated</label>
    <type>DateTime</type>
</CustomField>