force-app/main/default/objects/Partnership_Objective__c/fields/Data_Automated_By_RevOps__c.field-meta.xml
<CustomField>
    <fullName>Data_Automated_By_RevOps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Automated By RevOps</label>
    <type>Checkbox</type>
</CustomField>