force-app/main/default/objects/Partnership_Objective__c/fields/Data_Pulled_From_Opportunity_Datestamp__c.field-meta.xml
<CustomField>
    <fullName>Data_Pulled_From_Opportunity_Datestamp__c</fullName>
    <label>Data Pulled From Opportunity Datestamp</label>
    <type>DateTime</type>
</CustomField>