force-app/main/default/objects/Partnership_Objective__c/fields/Deal_Construct__c.field-meta.xml
<CustomField>
    <fullName>Deal_Construct__c</fullName>
    <description>This field is optional, but it should indicate what type of deal construct the Partnership Objective stems from when associated with a deal</description>
    <inlineHelpText>This field is optional, but it should indicate what type of deal construct the Partnership Objective stems from when associated with a deal</inlineHelpText>
    <label>Deal Construct</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activation Incentive</fullName>
            </value>
            <value>
                <fullName>Blockchain</fullName>
            </value>
            <value>
                <fullName>Channel Sales</fullName>
            </value>
            <value>
                <fullName>Performance Incentive</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product Integration</fullName>
            </value>
            <value>
                <fullName>Referrals</fullName>
            </value>
            <value>
                <fullName>ITP</fullName>
            </value>
            <value>
                <fullName>Indirect Liquidity</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
                <isActive>false</isActive>
                <label>Channel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>