force-app/main/default/objects/Partnership_Objective__c/fields/Growth__c.field-meta.xml
<CustomField>
    <fullName>Growth__c</fullName>
    <label>Growth</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>