force-app/main/default/objects/Partnership_Objective__c/fields/Key_Results__c.field-meta.xml
<CustomField>
    <fullName>Key_Results__c</fullName>
    <description>This field should include the measurable outcomes that would define successful attainment of the objective (i.e. Activate 50,000 meaningful wallets in Chile within 3 months of launch).</description>
    <inlineHelpText>This field should include the measurable outcomes that would define successful attainment of the objective (i.e. Activate 50,000 meaningful wallets in Chile within 3 months of launch). Link to best practices: https://app.getguru.com/#/facts/5d3fc866-f027-4617-88ef-8bdafc559081</inlineHelpText>
    <label>Key Result(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>