force-app/main/default/objects/Partnership_Objective__c/fields/Last_30_Day_MEWs__c.field-meta.xml
<CustomField>
    <fullName>Last_30_Day_MEWs__c</fullName>
    <description>Average number of MeWs over the previous 30 days.</description>
    <inlineHelpText>Average number of MeWs over the previous 30 days.</inlineHelpText>
    <label>Last 30 Day MEWs_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>