force-app/main/default/objects/Partnership_Objective__c/fields/Last_30_Day_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Last_30_Day_Referrals__c</fullName>
    <label>Last 30 Day Referrals_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>