force-app/main/default/objects/Partnership_Objective__c/fields/Last_30_Day_Stablecoin_on_Platform__c.field-meta.xml
<CustomField>
    <fullName>Last_30_Day_Stablecoin_on_Platform__c</fullName>
    <description>Average USDC on platform over the previous 30 days.</description>
    <inlineHelpText>Average USDC on platform over the previous 30 days.</inlineHelpText>
    <label>Last 30 Day Stablecoin on Platform_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>