force-app/main/default/objects/Partnership_Objective__c/fields/Last_30_Day_Stablecoins_Issued__c.field-meta.xml
<CustomField>
    <fullName>Last_30_Day_Stablecoins_Issued__c</fullName>
    <label>Last 30 Day Stablecoins Issued_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>