force-app/main/default/objects/Partnership_Objective__c/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <description>This field should reflect the go live date. In new engagements this may depend on technical integrations and not perfectly match the Objective Start Date. Specific to Growth Partnerships, this should be the date when a partner’s awards should begin accruing.</description>
    <inlineHelpText>This field should reflect the go live date. In new engagements this may depend on technical integrations and not perfectly match the Objective Start Date. Specific to Growth Partnerships, this should be the date when a partner’s awards should begin accruing.</inlineHelpText>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>