force-app/main/default/objects/Partnership_Objective__c/fields/Launch_Date_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date_Rationale__c</fullName>
    <label>Launch Date Rationale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>