force-app/main/default/objects/Partnership_Objective__c/fields/Learnings__c.field-meta.xml
<CustomField>
    <fullName>Learnings__c</fullName>
    <inlineHelpText>What have we learned from this relationship that we didn&apos;t know at deal signing?</inlineHelpText>
    <label>Learnings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>