force-app/main/default/objects/Partnership_Objective__c/fields/Liquidity__c.field-meta.xml
<CustomField>
    <fullName>Liquidity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be selected when the Partnership Object supports the Commercial team’s objective of making USDC the most liquid, and accessible digital dollar</description>
    <inlineHelpText>This field should be selected when the Partnership Object supports the Commercial team’s objective of making USDC the most liquid, and accessible digital dollar</inlineHelpText>
    <label>Liquidity_DNU</label>
    <type>Checkbox</type>
</CustomField>