force-app/main/default/objects/Partnership_Objective__c/fields/Logged_in_BD__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_BD__c</fullName>
    <description>Allow the BD to see only the Partnership Objected that they are assigned to. This is a hidden field only used for reports and dashboards.</description>
    <formula>IF( Account__r.Business_Development_Owner__r.Id = $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in BD</label>
    <type>Checkbox</type>
</CustomField>