force-app/main/default/objects/Partnership_Objective__c/fields/Logged_in_SE__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_SE__c</fullName>
    <description>Allow the SE to see only the Partnership Objected that they are assigned to. This is a hidden field only used for reports and dashboards.</description>
    <formula>If(  Account__r.Solutions_Engineer__r.Id  = $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in SE</label>
    <type>Checkbox</type>
</CustomField>