force-app/main/default/objects/Partnership_Objective__c/fields/MEW_Growth__c.field-meta.xml
<CustomField>
    <fullName>MEW_Growth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be selected when the Partnership Object supports the Commercial team’s objective of increasing meaningful wallets</description>
    <inlineHelpText>This field should be selected when the Partnership Object supports the Commercial team’s objective of increasing meaningful wallets</inlineHelpText>
    <label>MEW Growth_DNU</label>
    <type>Checkbox</type>
</CustomField>