force-app/main/default/objects/Partnership_Objective__c/fields/MeW_Timeframe_in_months__c.field-meta.xml
<CustomField>
    <fullName>MeW_Timeframe_in_months__c</fullName>
    <description>Projected number of months to realize the Projected MeWs target.</description>
    <inlineHelpText>Projected number of months to realize the Projected MeWs target.</inlineHelpText>
    <label>MeW Timeframe (in months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>