force-app/main/default/objects/Partnership_Objective__c/fields/MeWs_Attainment__c.field-meta.xml
<CustomField>
    <fullName>MeWs_Attainment__c</fullName>
    <formula>IF(AND(!ISBLANK(Projected_MeWs_Growth__c), !ISBLANK(MeWs_Growth__c)), MeWs_Growth__c / Projected_MeWs_Growth__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MeWs Attainment %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>