force-app/main/default/objects/Partnership_Objective__c/fields/MeWs_Growth__c.field-meta.xml
<CustomField>
    <fullName>MeWs_Growth__c</fullName>
    <description>Incremental MeWs added since the start of the objective</description>
    <formula>IF(
   AND(!ISBLANK(Current_MEWs__c), !ISBLANK(Starting_MEWs__c)),
   Current_MEWs__c - Starting_MEWs__c,
   null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Incremental MeWs added since the start of the objective</inlineHelpText>
    <label>MeWs Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>