force-app/main/default/objects/Partnership_Objective__c/fields/Monthly_Avg_MEWs__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Avg_MEWs__c</fullName>
    <description>Average number of MeWs over the preceding months.</description>
    <inlineHelpText>Average number of MeWs over the preceding months.</inlineHelpText>
    <label>Monthly Avg MEWs_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>