force-app/main/default/objects/Partnership_Objective__c/fields/Monthly_Avg_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Avg_Referrals__c</fullName>
    <label>Monthly Avg Referrals_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>