force-app/main/default/objects/Partnership_Objective__c/fields/Monthly_Avg_Stablecoin_on_Platform__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Avg_Stablecoin_on_Platform__c</fullName>
    <description>Average USDC on platform over the preceding months.</description>
    <inlineHelpText>Average USDC on platform over the preceding months.</inlineHelpText>
    <label>Monthly Avg Stablecoin on Platform_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>