force-app/main/default/objects/Partnership_Objective__c/fields/Monthly_Avg_Stablecoins_Issued__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Avg_Stablecoins_Issued__c</fullName>
    <label>Monthly Avg Stablecoins Issued_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>