force-app/main/default/objects/Partnership_Objective__c/fields/Most_Recent_Note__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Note__c</fullName>
    <label>Most Recent Note</label>
    <type>TextArea</type>
</CustomField>