force-app/main/default/objects/Partnership_Objective__c/fields/Most_Recent_Note_History__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Note_History__c</fullName>
    <label>Most Recent Note History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>