force-app/main/default/objects/Partnership_Objective__c/fields/Needs_Note_Update__c.field-meta.xml
<CustomField>
    <fullName>Needs_Note_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Note Update</label>
    <type>Checkbox</type>
</CustomField>