force-app/main/default/objects/Partnership_Objective__c/fields/Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date__c</fullName>
    <label>Next Step Date</label>
    <type>Date</type>
</CustomField>