force-app/main/default/objects/Partnership_Objective__c/fields/Objective_Description__c.field-meta.xml
<CustomField>
    <fullName>Objective_Description__c</fullName>
    <description>This field should include include no more than a sentence and form an exacting definition of the objective</description>
    <inlineHelpText>This field should include include no more than a sentence and form an exacting definition of the objective</inlineHelpText>
    <label>Objective Description</label>
    <type>TextArea</type>
</CustomField>