force-app/main/default/objects/Partnership_Objective__c/fields/Objective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Objective_End_Date__c</fullName>
    <description>This field should indicate when we expect to fulfill the objective</description>
    <inlineHelpText>This field should indicate when we expect to fulfill the objective</inlineHelpText>
    <label>Objective End Date</label>
    <type>Date</type>
</CustomField>