force-app/main/default/objects/Partnership_Objective__c/fields/Objective_Health_Reason__c.field-meta.xml
<CustomField>
    <fullName>Objective_Health_Reason__c</fullName>
    <description>https://app.asana.com/0/1203473392486179/1206550784694714/f

Definitions are linked in this asana task</description>
    <inlineHelpText>Why is the Objective Health off track? Click the Objective Status Definitions link under Resources to see definitions of each value.</inlineHelpText>
    <label>Objective Health Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Dependency</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Incentive Alignment</fullName>
            </value>
            <value>
                <fullName>Incorrect Hypothesis</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Market Dynamics</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Partner Engagement</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Technical Audit</fullName>
            </value>
            <value>
                <fullName>Use-Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>