force-app/main/default/objects/Partnership_Objective__c/fields/Objective_Health_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Objective_Health_Reason_Details__c</fullName>
    <description>Text field for CSM to provide additional context on why the Partnership Objective is off track.</description>
    <inlineHelpText>Please enter additional details for your Partnership Objective Health.</inlineHelpText>
    <label>Objective Health Reason Details</label>
    <type>TextArea</type>
</CustomField>