force-app/main/default/objects/Partnership_Objective__c/fields/Objective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Objective_Start_Date__c</fullName>
    <description>This field should indicate when active work on the objective will begin</description>
    <inlineHelpText>This field should indicate when active work on the objective will begin</inlineHelpText>
    <label>Objective Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>