force-app/main/default/objects/Partnership_Objective__c/fields/Objective_Status__c.field-meta.xml
<CustomField>
    <fullName>Objective_Status__c</fullName>
    <description>This field should indicate the most current status of the objective based on the goals defined, the current progress, and the planned completion</description>
    <inlineHelpText>This field should indicate the most current status of the objective based on the goals defined, the current progress, and the planned completion</inlineHelpText>
    <label>Objective Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
                <color>#F3D904</color>
                <label>Onboarding</label>
            </value>
            <value>
                <fullName>Pre-Launch</fullName>
                <color>#E27001</color>
                <label>Pre-Launch</label>
            </value>
            <value>
                <fullName>Launched</fullName>
                <color>#419249</color>
                <label>Launched</label>
            </value>
            <value>
                <fullName>Not Active</fullName>
                <color>#BBBBBB</color>
                <label>Not Active</label>
            </value>
            <value>
                <fullName>At Risk</fullName>
                <isActive>false</isActive>
                <label>At Risk</label>
            </value>
            <value>
                <fullName>Exceeded Expectations</fullName>
                <isActive>false</isActive>
                <label>Exceeded Expectations</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <isActive>false</isActive>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Objective Not Met</fullName>
                <isActive>false</isActive>
                <label>Objective Not Met</label>
            </value>
            <value>
                <fullName>Off Track</fullName>
                <isActive>false</isActive>
                <label>Off Track</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>On Track</fullName>
                <isActive>false</isActive>
                <label>On Track</label>
            </value>
            <value>
                <fullName>Successful</fullName>
                <isActive>false</isActive>
                <label>Successful</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>