force-app/main/default/objects/Partnership_Objective__c/fields/of_Referrals_Onboarded__c.field-meta.xml
<CustomField>
    <fullName>of_Referrals_Onboarded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by PMs to categorize objectives</description>
    <inlineHelpText>Please see the Guru card - Primary Objectives Guidance for PMs</inlineHelpText>
    <label># of Referrals Onboarded_DNU</label>
    <type>Checkbox</type>
</CustomField>