force-app/main/default/objects/Partnership_Objective__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <inlineHelpText>What are the primary opportunities we have in front of us to grow the relationship?</inlineHelpText>
    <label>Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>