force-app/main/default/objects/Partnership_Objective__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional, but should be filled in most cases since the majority of objectives will stem from a specific Opportunity</description>
    <inlineHelpText>This field is optional, but should be filled in most cases since the majority of objectives will stem from a specific Opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Partnership Objectives</relationshipLabel>
    <relationshipName>Partnership_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>