force-app/main/default/objects/Partnership_Objective__c/fields/Partner_Marketing_Owner__c.field-meta.xml
<CustomField>
    <fullName>Partner_Marketing_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by CSMs until we have Partner Marketing auto-assignment rules</description>
    <inlineHelpText>Team member from Partner Marketing associated with this partnership.</inlineHelpText>
    <label>Partner Marketing Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partnership_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>