force-app/main/default/objects/Partnership_Objective__c/fields/Partner_Objective_Lifecycle__c.field-meta.xml
<CustomField>
    <fullName>Partner_Objective_Lifecycle__c</fullName>
    <description>Used to track the lifecycle of the customer during their objective tracking.</description>
    <inlineHelpText>This field should reflect the current lifecycle stage of the Opportunity reflected in this Objective. If not connected to an Opportunity, this should reflect the overall Account lifecycle stage.</inlineHelpText>
    <label>Partner Objective Lifecycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>